@@ -8,7 +8,7 @@ user:
     <li><a href="/admin" accesskey="a" title="Admin Pages">Administration</a></li>
     <li><a href="/recent" accesskey="r" title="Your Edits">Your Edits</a></li>
     <li><a href="/prefs" accesskey="u" title="User Preferences">Preferences</a></li>
-    <li><a href="/logout" title="Logout">Logout</a></li>
+    <li><a href="/logout" title="Logout">Logout</a><br /><% $remote->getNick %></li>
 % } else {
     <li><a href="/login">Login</a></li>
 % }
@@ -32,7 +32,7 @@ menu:
 %     }
 %     if ($remote) {
         <li><a href="<% $page->getRevisionsURI %>" accesskey="r" title="Previous Revision">Revision <% $page->getRevNum %></a></li>
-        <li><a href="<% $page->getDiffURI %>" title="Colored Differences to Last Version">Visualize Changes</a></li>
+        <li><a href="<% $page->getDiffURI %>" title="Colored Differences to Last Version">Show Changes</a></li>
 %     } else {
         <li>Revision <% $page->getRevNum %></li>
 %     }
